--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,7 @@
       "./packages/datx-jsonapi-angular/tsconfig.json",
       "./packages/datx-network/tsconfig.json",
       "./packages/datx-utils/tsconfig.json",
-      "./packages/swr/tsconfig.json"
+      "./packages/datx-swr/tsconfig.json"
     ]
   }
 }
