--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,5 +36,5 @@ jobs:
       - name: Install correct MobX version
         if: ${{ matrix.mobx-version > 0 }}
         run: yarn workspace @datx/utils add mobx@${{ matrix.mobx-version }} --dev
-      - run: lerna run build
-      - run: MOBX_VERSION=${{ matrix.mobx-version }} lerna run test
+      - run: lerna run build --no-private
+      - run: MOBX_VERSION=${{ matrix.mobx-version }} lerna run test --no-private
