--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,6 @@
 {
   "lerna": "2.5.1",
+  "packages": ["packages/*"],
   "version": "2.5.0-beta.11",
   "npmClient": "yarn",
   "useWorkspaces": true,
