--- a/package.json
+++ b/package.json
@@ -1,13 +1,5 @@
 {
   "name": "datx",
-  "devDependencies": {
-    "@infinumjs/eslint-config-core-ts": "^3.3.1",
-    "eslint": "^8.17.0",
-    "husky": "^8.0.0",
-    "lerna": "^5.1.1",
-    "prettier": "2.7.1",
-    "typescript": "4.7.4"
-  },
   "scripts": {
     "lint": "eslint packages/**/*.ts",
     "test": "lerna run test",
@@ -28,8 +20,15 @@
     "packages/*"
   ],
   "dependencies": {
+    "@infinumjs/eslint-config-core-ts": "^3.3.1",
+    "@manypkg/cli": "^0.19.1",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1"
+    "@typescript-eslint/parser": "^5.27.1",
+    "eslint": "^8.17.0",
+    "husky": "^8.0.0",
+    "lerna": "^5.1.1",
+    "prettier": "2.7.1",
+    "typescript": "~4.7.3"
   },
   "packageManager": "yarn@3.2.4"
 }
