--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "datx",
-  "devDependencies": {
-    "@infinumjs/eslint-config-core-ts": "^3.3.1",
-    "eslint": "^8.17.0",
-    "husky": "^8.0.0",
-    "lerna": "^5.1.1",
-    "prettier": "2.7.1",
-    "typescript": "4.7.4"
-  },
   "scripts": {
     "lint": "eslint packages/**/*.ts",
+    "test": "lerna run test",
+    "build": "lerna run build --no-private",
+    "watch": "lerna run watch --no-private",
+    "clean": "lerna clean && yarn clean:dist",
+    "clean:dist": "lerna exec -- rm -rf ./dist",
+    "pkg:check": "manypkg check",
+    "pkg:fix": "manypkg fix",
     "postinstall": "npm run prepare",
     "prepare": "husky install",
-    "publish": "lerna publish --contents dist",
+    "publish": "lerna publish --contents dist --no-private",
+    "publish:beta": "npm run publish -- --npm-tag=beta --preid=beta",
     "publish:dry": "lerna publish --contents dist --no-push --no-git-tag-version"
   },
   "private": true,
@@ -20,8 +20,15 @@
     "packages/*"
   ],
   "dependencies": {
+    "@infinumjs/eslint-config-core-ts": "^3.3.1",
+    "@manypkg/cli": "^0.19.1",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1"
+    "@typescript-eslint/parser": "^5.27.1",
+    "eslint": "^8.17.0",
+    "husky": "^8.0.0",
+    "lerna": "^5.1.1",
+    "prettier": "2.7.1",
+    "typescript": "~4.7.3"
   },
   "packageManager": "yarn@3.2.4"
 }
