--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,7 @@
       "./packages/datx-jsonapi/tsconfig.json",
       "./packages/datx-jsonapi-angular/tsconfig.json",
       "./packages/datx-network/tsconfig.json",
+      "./packages/datx-swr/tsconfig.json",
       "./packages/datx-utils/tsconfig.json"
     ]
   }
