--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
   "lerna": "2.5.1",
   "packages": ["packages/*"],
-  "version": "2.4.14",
+  "version": "2.5.0-beta.11",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "publishConfig": {
