--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@datx/jsonapi-angular",
-  "version": "2.4.14",
+  "version": "2.5.0-beta.11",
   "scripts": {
     "ng": "ng",
     "build": "ng build datx-jsonapi-angular && npm run copy-license && npm run copy-readme && node ./prepublish.js",
     "copy-license": "cp ./LICENSE ./dist/LICENSE",
     "copy-readme": "cp ./README.md ./dist/README.md",
     "test": "jest",
-    "ts:check": "tsc --noEmit"
+    "ts:check": "tsc --noEmit",
+    "test:watch": "jest --watch --coverage"
   },
   "peerDependencies": {
     "@angular/common": ">=12",
@@ -26,10 +27,10 @@
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.1.2",
     "@angular/router": "~14.2.0",
-    "@datx/core": "2.4.12",
-    "@datx/jsonapi": "2.4.14",
-    "@datx/network": "2.4.12",
-    "@datx/utils": "2.4.8",
+    "@datx/core": "2.5.0-beta.11",
+    "@datx/jsonapi": "2.5.0-beta.11",
+    "@datx/network": "2.5.0-beta.11",
+    "@datx/utils": "2.5.0-beta.11",
     "@types/jest": "^28.1.1",
     "@types/node": "^18.7.6",
     "jest": "^28.1.1",
