--- a/packages/datx-network/package.json
+++ b/packages/datx-network/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/network",
-  "version": "2.4.12",
+  "version": "2.5.0-beta.11",
   "description": "DatX network layer",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -39,9 +39,10 @@
   },
   "scripts": {
     "test": "jest --coverage",
-    "watch": "jest --watch --coverage",
+    "test:watch": "jest --watch --coverage",
     "prepublish": "npm run build",
     "build": "rollup -c",
+    "watch": "rollup --config --watch",
     "ts:check": "tsc --noEmit"
   },
   "jest": {
@@ -69,7 +70,7 @@
     ]
   },
   "dependencies": {
-    "@datx/core": "2.4.12",
-    "@datx/utils": "2.4.8"
+    "@datx/core": "2.5.0-beta.11",
+    "@datx/utils": "2.5.0-beta.11"
   }
 }
