--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
       "./packages/datx/tsconfig.json",
       "./packages/datx-jsonapi/tsconfig.json",
       "./packages/datx-jsonapi-angular/tsconfig.json",
+      "./packages/datx-jsonapi-types/tsconfig.json",
       "./packages/datx-network/tsconfig.json",
       "./packages/datx-swr/tsconfig.json",
       "./packages/datx-utils/tsconfig.json"
