--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -29,6 +29,7 @@
     "@angular/router": "~14.2.0",
     "@datx/core": "2.5.0-beta.11",
     "@datx/jsonapi": "2.5.0-beta.11",
+    "@datx/jsonapi-types": "2.5.0-beta.11",
     "@datx/network": "2.5.0-beta.11",
     "@datx/utils": "2.5.0-beta.11",
     "@types/jest": "^28.1.1",
