--- a/packages/datx-jsonapi-types/package.json
+++ b/packages/datx-jsonapi-types/package.json
@@ -1,9 +1,7 @@
 {
-  "name": "@datx/jsonapi",
+  "name": "@datx/jsonapi-types",
   "version": "2.5.0-beta.11",
-  "description": "DatX mixin for JSON API support",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
+  "description": "DatX JSON:API types",
   "typings": "dist/index.d.ts",
   "sideEffects": false,
   "repository": {
@@ -18,22 +16,17 @@
   "license": "MIT",
   "keywords": [
     "datx",
-    "mobx",
-    "jsonapi"
+    "mobx"
   ],
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.2",
     "@types/jest": "^28.1.1",
-    "@types/lodash": "^4.14.182",
     "@types/node": "^18.7.6",
-    "@types/uuid": "^8.3.4",
-    "isomorphic-fetch": "^3.0.0",
     "jest": "^28.1.1",
-    "lodash": "^4.17.21",
     "rollup": "^2.75.6",
-    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
     "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-terser": "^7.0.2",
@@ -46,7 +39,7 @@
     "test:watch": "jest --watch --coverage",
     "prepublish": "npm run build",
     "build": "rollup -c",
-    "watch": "rollup -c --watch",
+    "watch": "rollup --config --watch",
     "ts:check": "tsc --noEmit"
   },
   "jest": {
@@ -58,7 +51,6 @@
       "ts",
       "js"
     ],
-    "testEnvironment": "jsdom",
     "testRegex": "test/(.*).test.ts$",
     "globals": {
       "ts-jest": {
@@ -69,14 +61,9 @@
     },
     "preset": "ts-jest",
     "testMatch": null,
+    "passWithNoTests": true,
     "setupFilesAfterEnv": [
       "./test/setup.ts"
     ]
-  },
-  "dependencies": {
-    "@datx/core": "2.5.0-beta.11",
-    "@datx/jsonapi-types": "2.5.0-beta.11",
-    "@datx/network": "2.5.0-beta.11",
-    "@datx/utils": "2.5.0-beta.11"
   }
 }
