--- a/packages/datx-jsonapi-types/package.json
+++ b/packages/datx-jsonapi-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/jsonapi-types",
-  "version": "2.5.0-beta.11",
+  "version": "2.5.0",
   "description": "DatX JSON:API types",
   "typings": "dist/index.d.ts",
   "sideEffects": false,
