--- a/packages/datx-swr/package.json
+++ b/packages/datx-swr/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/swr",
-  "version": "2.5.0-beta.11",
+  "version": "2.5.0",
   "description": "DatX bindings for SWR",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -35,8 +35,8 @@
     "watch": "rollup --config --watch"
   },
   "dependencies": {
-    "@datx/core": "2.5.0-beta.11",
-    "@datx/jsonapi": "2.5.0-beta.11"
+    "@datx/core": "2.5.0",
+    "@datx/jsonapi": "2.5.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.0",
