--- a/packages/datx-jsonapi-angular/projects/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/projects/datx-jsonapi-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/jsonapi-angular",
-  "version": "2.4.9",
+  "version": "2.5.1",
   "description": "DatX mixin for Angular JSON API support",
   "sideEffects": false,
   "repository": {
@@ -23,13 +23,13 @@
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/common": ">=12",
-    "@angular/core": ">=12",
-    "@datx/core": "2.5.0-beta.11",
-    "@datx/jsonapi": "2.5.0-beta.11",
-    "@datx/network": "2.5.0-beta.11",
-    "@datx/utils": "2.5.0-beta.11",
-    "@datx/jsonapi-types": "2.5.0-beta.11",
+    "@angular/common": ">=14",
+    "@angular/core": ">=14",
+    "@datx/core": "2.5.1",
+    "@datx/jsonapi": "2.5.1",
+    "@datx/jsonapi-types": "2.5.1",
+    "@datx/network": "2.5.1",
+    "@datx/utils": "2.5.1",
     "rxjs": "6 || 7"
   }
 }
