--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,8 @@
       "./packages/datx-jsonapi-types/tsconfig.json",
       "./packages/datx-network/tsconfig.json",
       "./packages/datx-swr/tsconfig.json",
-      "./packages/datx-utils/tsconfig.json"
+      "./packages/datx-utils/tsconfig.json",
+      "./packages/datx-test-data-factory/tsconfig.json"
     ]
   }
 }
