Init codemod package

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,8 @@
       "./packages/datx-network/tsconfig.json",
       "./packages/datx-swr/tsconfig.json",
       "./packages/datx-utils/tsconfig.json",
-      "./packages/datx-test-data-factory/tsconfig.json"
+      "./packages/datx-test-data-factory/tsconfig.json",
+      "./packages/datx-codemod/tsconfig.json"
     ]
   }
 }
