--- a/packages/datx-swr/package.json
+++ b/packages/datx-swr/package.json
@@ -42,9 +42,7 @@
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.2",
-    "@swc-node/jest": "1.4.3",
-    "@swc/core": "^1.3.21",
-    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "14.2.1",
     "@types/isomorphic-fetch": "0.0.36",
@@ -62,6 +60,7 @@
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
     "rollup-plugin-terser": "^7.0.2",
     "swr": "2.0.0-beta.6",
+    "ts-jest": "28.0.4",
     "tslib": "~2.4.0",
     "typescript": "~4.7.3",
     "uuid": "^8.3.2"
@@ -69,5 +68,42 @@
   "peerDependencies": {
     "react": "^16.11.0 || ^17.0.0 || ^18.0.0",
     "swr": "^1.3.0 || ^2.0.0"
+  },
+  "jest": {
+    "coveragePathIgnorePatterns": [
+      "/test/",
+      "/node_modules/"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "js",
+      "tsx",
+      "jsx"
+    ],
+    "globals": {
+      "ts-jest": {
+        "diagnostics": {
+          "warnOnly": true
+        }
+      }
+    },
+    "preset": "ts-jest",
+    "testMatch": null,
+    "testEnvironment": "jsdom",
+    "testRegex": "/test/.*\\.test\\.tsx?$",
+    "modulePathIgnorePatterns": [
+      "<rootDir>/examples/",
+      "packages/.*/dist"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/test/setup.ts"
+    ],
+    "moduleNameMapper": {
+      "^@datx/swr": "<rootDir>/src",
+      "^@datx/utils": "<rootDir>/../datx-utils/src/",
+      "^@datx/jsonapi": "<rootDir>/../datx-jsonapi/src/"
+    },
+    "automock": false,
+    "resetMocks": false
   }
 }
