--- a/packages/datx-swr/tsconfig.build.json
+++ b/packages/datx-swr/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "jsx": "react",
+    "jsx": "react-jsx",
     "allowJs": false,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
