--- a/packages/datx-swr/package.json
+++ b/packages/datx-swr/package.json
@@ -60,7 +60,7 @@
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
     "rollup-plugin-terser": "^7.0.2",
     "swr": "2.0.0-beta.6",
-    "ts-jest": "28.0.4",
+    "ts-jest": "^28.0.4",
     "tslib": "~2.4.0",
     "typescript": "~4.7.3",
     "uuid": "^8.3.2"
