--- a/packages/datx-codemod/tsconfig.json
+++ b/packages/datx-codemod/tsconfig.json
@@ -5,7 +5,9 @@
     "esModuleInterop": true,
     "target": "es2015",
     "downlevelIteration": true,
-    "preserveWatchOutput": true
+    "preserveWatchOutput": true,
+    "outDir": "./dist",
+    "rootDir": "./src"
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules"]
