--- a/packages/datx-codemod/package.json
+++ b/packages/datx-codemod/package.json
@@ -12,46 +12,56 @@
   "homepage": "https://github.com/infinum/datx#readme",
   "author": "Infinum JavaScript Team <hello@infinum.com>",
   "license": "MIT",
+  "type": "module",
   "files": [
     "transforms/*.js",
-    "bin/*.js",
-    "lib/**/*.js",
-    "lib/cra-to-next/gitignore"
+    "bin/*.js"
   ],
-  "bin": "./bin/datx-codemod.js",
+  "bin": "dist/bin/datx-codemod.js",
   "scripts": {
-    "build": "tsc -d -p tsconfig.json",
-    "prepublishOnly": "cd ../../ && turbo run build",
     "dev": "tsc -d -w -p tsconfig.json",
-    "test": "jest"
+    "test": "jest",
+    "prepublish": "npm run build",
+    "build": "rollup -c",
+    "watch": "rollup -c --watch",
+    "ts:check": "tsc --noEmit"
   },
   "dependencies": {
     "chalk": "5.2.0",
     "cheerio": "1.0.0-rc.12",
-    "execa": "7.1.1",
-    "globby": "13.1.4",
+    "execa": "4.0.3",
+    "globby": "11.0.1",
     "inquirer": "9.2.0",
     "is-git-clean": "1.1.0",
     "jscodeshift": "0.14.0",
     "meow": "11.0.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.2",
+    "@rollup/plugin-typescript": "^8.3.2",
     "@types/jest": "^29.5.1",
     "@types/jscodeshift": "0.11.6",
     "jest": "^29.5.0",
+    "rollup": "^2.75.6",
+    "rollup-plugin-add-shebang": "^0.3.1",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
+    "rollup-plugin-generate-package-json": "^3.2.0",
+    "rollup-plugin-terser": "^7.0.2",
     "typescript": "~4.7.3"
   },
   "jest": {
     "coveragePathIgnorePatterns": [
-      "/transforms/__tests__",
-      "/transforms/__testfixtures__",
+      "src//transforms/__tests__",
+      "src//transforms/__testfixtures__",
       "/node_modules/"
     ],
     "moduleFileExtensions": [
       "ts",
       "js"
     ],
-    "testRegex": "transforms/__tests__/(.*).test.ts$",
+    "testRegex": "src/transforms/__tests__/(.*).test.ts$",
     "globals": {
       "ts-jest": {
         "diagnostics": {
