--- a/packages/datx-codemod/package.json
+++ b/packages/datx-codemod/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/codemod",
-  "version": "2.5.1",
+  "version": "2.5.1-beta.3",
   "description": "DatX codemods",
   "repository": {
     "type": "git",
@@ -12,43 +12,39 @@
   "homepage": "https://github.com/infinum/datx#readme",
   "author": "Infinum JavaScript Team <hello@infinum.com>",
   "license": "MIT",
-  "type": "module",
   "files": [
     "transforms/*.js",
     "bin/*.js"
   ],
-  "bin": "dist/bin/datx-codemod.js",
   "scripts": {
-    "dev": "tsc -d -w -p tsconfig.json",
-    "test": "jest",
+    "dev": "tsc -w -p tsconfig.json",
+    "test": "jest --coverage",
+    "test:watch": "jest --watch --coverage",
     "prepublish": "npm run build",
-    "build": "rollup -c",
-    "watch": "rollup -c --watch",
+    "build": "tsc -p tsconfig.json && node ./prepublish.js",
     "ts:check": "tsc --noEmit"
   },
   "dependencies": {
-    "chalk": "5.2.0",
-    "cheerio": "1.0.0-rc.12",
+    "chalk": "4.1.0",
+    "cheerio": "1.0.0-rc.9",
     "execa": "4.0.3",
     "globby": "11.0.1",
-    "inquirer": "9.2.0",
+    "inquirer": "7.3.3",
     "is-git-clean": "1.1.0",
-    "jscodeshift": "0.14.0",
-    "meow": "11.0.0"
+    "jscodeshift": "0.13.1",
+    "meow": "7.0.1"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-commonjs": "^24.1.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-typescript": "^8.3.2",
     "@types/jest": "^29.5.1",
     "@types/jscodeshift": "0.11.6",
     "jest": "^29.5.0",
     "rollup": "^2.75.6",
-    "rollup-plugin-add-shebang": "^0.3.1",
     "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
     "rollup-plugin-generate-package-json": "^3.2.0",
-    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-preserve-shebang": "^1.0.1",
     "typescript": "~4.7.3"
   },
   "jest": {
