Fix eslint errors

--- a/packages/datx-codemod/tsconfig.json
+++ b/packages/datx-codemod/tsconfig.json
@@ -12,5 +12,5 @@
     "rootDir": "./src"
   },
   "include": ["**/*.ts"],
-  "exclude": ["node_modules", "**/__tests__/*", "**/prop-to-attribute/*"]
+  "exclude": ["node_modules"]
 }
