--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,23 +10,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x]
-        mobx-version: [-2, -1, 0, 4, 5, 6]
-        # -2 - mobx off, real mobx in tests
-        # -1 - mobx off, mock mobx in tests
-        # 0 - no mobx, mock mobx in tests
-        # 4+ - mobx@version, real mobx in tests
-
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 1
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 18
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 18
           cache: 'yarn'
       - run: npm install -g lerna@6
       - run: yarn
