--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "precommit": "npm run lint & lerna run test",
     "lint": "eslint packages/**/*.ts",
+    "ts:check": "lerna run ts:check",
     "postinstall": "npm run prepare",
     "prepare": "husky install",
     "test": "lerna run test",
@@ -16,7 +17,8 @@
     "pkg:fix": "manypkg fix",
     "publish": "lerna publish --contents dist --no-private",
     "publish:beta": "npm run publish -- --npm-tag=beta --preid=beta",
-    "publish:dry": "lerna publish --contents dist --no-push --no-git-tag-version"
+    "publish:dry": "lerna publish --contents dist --no-push --no-git-tag-version",
+    "nx:report": "nx report"
   },
   "private": true,
   "workspaces": [
@@ -39,6 +41,7 @@
   "dependencies": {
     "@manypkg/cli": "^0.19.2",
     "@nrwl/cli": "^15.9.2",
+    "nx": "^16.4.0",
     "typescript": "~4.7.3"
   },
   "packageManager": "yarn@3.2.4"
