--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -37,14 +37,14 @@
   "dependencies": {
     "@datx/core": "3.0.0-beta.0",
     "@datx/jsonapi": "3.0.0-beta.0",
-    "@datx/jsonapi-types": "2.5.1",
+    "@datx/jsonapi-types": "3.0.0-beta.0",
     "@datx/network": "3.0.0-beta.0",
     "@datx/utils": "3.0.0-beta.0"
   },
   "peerDependencies": {
     "@datx/core": "3.0.0-beta.0",
     "@datx/jsonapi": "3.0.0-beta.0",
-    "@datx/jsonapi-types": "2.5.1",
+    "@datx/jsonapi-types": "3.0.0-beta.0",
     "@datx/network": "3.0.0-beta.0",
     "@datx/utils": "3.0.0-beta.0"
   },
@@ -60,11 +60,11 @@
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.1.2",
     "@angular/router": "~14.2.0",
-    "@datx/core": "2.6.1",
-    "@datx/jsonapi": "2.6.1",
-    "@datx/jsonapi-types": "2.5.1",
-    "@datx/network": "2.6.1",
-    "@datx/utils": "2.5.1",
+    "@datx/core": "3.0.0-beta.0",
+    "@datx/jsonapi": "3.0.0-beta.0",
+    "@datx/jsonapi-types": "3.0.0-beta.0",
+    "@datx/network": "3.0.0-beta.0",
+    "@datx/utils": "3.0.0-beta.0",
     "@types/jest": "^28.1.1",
     "@types/node": "^18.7.6",
     "jest": "^28.1.1",
