Fix missing docs parts

--- a/packages/datx-codemod/tsconfig.json
+++ b/packages/datx-codemod/tsconfig.json
@@ -11,6 +11,7 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
+  "rootDir": ".",
   "include": ["**/*.ts"],
   "exclude": ["node_modules"]
 }
