--- a/packages/datx-jsonapi-angular/tsconfig.json
+++ b/packages/datx-jsonapi-angular/tsconfig.json
@@ -1,6 +1,7 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
+  "rootDir": ".",
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
