--- a/package.json
+++ b/package.json
@@ -29,19 +29,17 @@
       "pre-commit": "npm run precommit"
     }
   },
-  "devDependencies": {
+  "dependencies": {
     "@infinumjs/eslint-config-core-ts": "^3.5.0",
+    "@manypkg/cli": "^0.19.2",
+    "@nrwl/cli": "^15.9.3",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "eslint": "^8.17.0",
     "husky": "^8.0.0",
     "lerna": "^6.6.1",
-    "prettier": "2.7.1"
-  },
-  "dependencies": {
-    "@manypkg/cli": "^0.19.2",
-    "@nrwl/cli": "^15.9.3",
     "nx": "^16.4.0",
+    "prettier": "2.7.1",
     "typescript": "~4.7.3"
   },
   "packageManager": "yarn@3.2.4"
