--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,6 @@ jobs:
         with:
           node-version: 18
           cache: 'yarn'
-      - run: npm install -g lerna@6
       - run: yarn
-      - run: lerna run build
-      - run: lerna run test
+      - run: npm run build
+      - run: npm run test
