--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -32,12 +32,12 @@
     "ts:check": "tsc --noEmit",
     "test:watch": "jest --watch --coverage"
   },
-  "peerDependencies": {
-    "@datx/core": "3.0.0-beta.0",
-    "@datx/jsonapi": "3.0.0-beta.0",
-    "@datx/jsonapi-types": "3.0.0-beta.0",
-    "@datx/network": "3.0.0-beta.0",
-    "@datx/utils": "3.0.0-beta.0"
+  "dependencies": {
+    "@datx/core": "3.0.0-beta.1",
+    "@datx/jsonapi": "3.0.0-beta.1",
+    "@datx/jsonapi-types": "3.0.0-beta.1",
+    "@datx/network": "3.0.0-beta.1",
+    "@datx/utils": "3.0.0-beta.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~14.1.3",
@@ -51,11 +51,6 @@
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.1.2",
     "@angular/router": "~14.2.0",
-    "@datx/core": "3.0.0-beta.1",
-    "@datx/jsonapi": "3.0.0-beta.1",
-    "@datx/jsonapi-types": "3.0.0-beta.1",
-    "@datx/network": "3.0.0-beta.1",
-    "@datx/utils": "3.0.0-beta.1",
     "@types/jest": "^28.1.1",
     "@types/node": "^18.7.6",
     "jest": "^28.1.1",
