--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
   "lerna": "6.6.1",
   "packages": ["packages/*"],
-  "version": "3.0.0-beta.3",
+  "version": "3.0.0",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "publishConfig": {
