--- a/packages/datx-codemod/package.json
+++ b/packages/datx-codemod/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/codemod",
-  "version": "3.0.0-beta.1",
+  "version": "3.0.0",
   "description": "DatX codemods",
   "repository": {
     "type": "git",
