--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/jsonapi-angular",
-  "version": "3.0.0-beta.3",
+  "version": "3.0.0",
   "module": "dist/fesm2015/datx-jsonapi-angular.js",
   "es2015": "dist/fesm2015/datx-jsonapi-angular.js",
   "esm2015": "dist/esm2015/datx-jsonapi-angular.js",
@@ -33,11 +33,11 @@
     "test:watch": "jest --watch --coverage"
   },
   "dependencies": {
-    "@datx/core": "3.0.0-beta.1",
-    "@datx/jsonapi": "3.0.0-beta.1",
-    "@datx/jsonapi-types": "3.0.0-beta.1",
-    "@datx/network": "3.0.0-beta.1",
-    "@datx/utils": "3.0.0-beta.1"
+    "@datx/core": "3.0.0",
+    "@datx/jsonapi": "3.0.0",
+    "@datx/jsonapi-types": "3.0.0",
+    "@datx/network": "3.0.0",
+    "@datx/utils": "3.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~14.1.3",
