--- a/packages/datx-utils/package.json
+++ b/packages/datx-utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/utils",
-  "version": "3.0.0-beta.1",
+  "version": "3.0.0",
   "description": "DatX lib utils for mixins",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
