--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
   "lerna": "2.5.1",
   "packages": ["packages/*"],
-  "version": "2.6.1",
+  "version": "2.6.2-beta.0",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "publishConfig": {
