--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/jsonapi",
-  "version": "2.6.1",
+  "version": "2.6.2-beta.0",
   "description": "DatX mixin for JSON API support",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -74,9 +74,9 @@
     ]
   },
   "dependencies": {
-    "@datx/core": "2.6.1",
+    "@datx/core": "2.6.2-beta.0",
     "@datx/jsonapi-types": "2.5.1",
-    "@datx/network": "2.6.1",
+    "@datx/network": "2.6.2-beta.0",
     "@datx/utils": "2.5.1"
   }
 }
