--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/core",
-  "version": "2.6.1",
+  "version": "2.6.2-beta.0",
   "description": "A MobX data store",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
