add missng @datx/jsonapi-types

--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -71,6 +71,7 @@
   },
   "dependencies": {
     "@datx/core": "3.0.0",
+    "@datx/jsonapi-types": "3.0.0",
     "@datx/network": "3.0.0",
     "@datx/utils": "3.0.0"
   }
