--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,6 @@
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "angular.enable-strict-mode-prompt": false,
-  "i18n-ally.localesPaths": [
-    "website/i18n"
-  ]
+  "i18n-ally.localesPaths": ["website/i18n"],
+  "gitlens.statusBar.dateFormat": ""
 }
