--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "datx",
   "devDependencies": {
-    "@infinumjs/eslint-config-core-ts": "^3.5.0",
-    "eslint": "^8.43.0",
+    "@infinum/eslint-plugin": "^1.0.0",
+    "eslint": "^8.45.0",
     "husky": "^8.0.3",
-    "lerna": "^7.1.1",
+    "lerna": "^7.1.4",
     "prettier": "2.8.8",
-    "typescript": "4.9.5"
+    "typescript": "5.1.6"
   },
   "scripts": {
     "precommit": "npm run lint & lerna run test",
-    "lint": "eslint packages/**/*.ts"
+    "lint": "eslint . --ext .ts --report-unused-disable-directives"
   },
   "private": true,
   "workspaces": [
@@ -22,7 +22,7 @@
     }
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1"
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0"
   }
 }
