--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/jsonapi-angular",
-  "version": "2.6.2-beta.1",
+  "version": "2.6.2-beta.2",
   "scripts": {
     "ng": "ng",
     "build": "ng build datx-jsonapi-angular && npm run copy-license && npm run copy-readme && node ./prepublish.js",
@@ -29,11 +29,11 @@
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.1.2",
     "@angular/router": "~14.2.0",
-    "@datx/core": "2.6.2-beta.1",
-    "@datx/jsonapi": "2.6.2-beta.1",
+    "@datx/core": "2.6.2-beta.2",
+    "@datx/jsonapi": "2.6.2-beta.2",
     "@datx/jsonapi-types": "2.5.1",
-    "@datx/network": "2.6.2-beta.1",
-    "@datx/utils": "2.5.1",
+    "@datx/network": "2.6.2-beta.2",
+    "@datx/utils": "2.6.2-beta.2",
     "@types/jest": "^28.1.1",
     "@types/node": "^18.7.6",
     "jest": "^28.1.1",
