--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/core",
-  "version": "2.6.2-beta.1",
+  "version": "2.6.2-beta.2",
   "description": "A MobX data store",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -63,6 +63,6 @@
     ]
   },
   "dependencies": {
-    "@datx/utils": "2.5.1"
+    "@datx/utils": "2.6.2-beta.2"
   }
 }
